# Gl_Learn

./: CMakeLists.txt
res/shaders/: rotate_shader.vert  shader.frag  shader.vert
src/: CoreTypes.h  main.cpp
src/Player/: camera.cpp  camera.h
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
